Wireframe overylay is not working properly with multiple modifiers #75343

Closed
opened 2020-04-03 15:33:15 +02:00 by fwfeet · 13 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.74

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-03 00:24, hash: 6f4dbb661f
Worked: (newest version of Blender that worked as expected)

Short description of error
The wireframe overlay in 3d viewport on 1.0 threshold (meaning it should show all edges) is not showing all edges when there is 2 bevel modifiers.

Fun fact the lack of wireframe gets passed on other modifiers (if you add triangulation for example)

Exact steps for others to reproduce the error

  • Add a cube
  • Add bevel modifiers with one edge bevel weight with 5 segments (dont apply!)
  • Add a new angle based bevel modifier
  • Turn on the wireframe overlay and put it on full value (1.0)
    Observe the wireframe of the angled bevel

image.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.74 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-03 00:24, hash: `6f4dbb661f` Worked: (newest version of Blender that worked as expected) **Short description of error** The wireframe overlay in 3d viewport on 1.0 threshold (meaning it should show all edges) is not showing all edges when there is 2 bevel modifiers. Fun fact the lack of wireframe gets passed on other modifiers (if you add triangulation for example) **Exact steps for others to reproduce the error** - Add a cube - Add bevel modifiers with one edge bevel weight with 5 segments (dont apply!) - Add a new angle based bevel modifier - Turn on the wireframe overlay and put it on full value (1.0) Observe the wireframe of the angled bevel ![image.png](https://archive.blender.org/developer/F8445949/image.png)
Author

Added subscriber: @costa

Added subscriber: @costa
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Just to make sure we are really all looking at the same thing [and not every dev looking at this has to follow your reproduction steps]:

  • Could you share your example .blend file?
Just to make sure we are really all looking at the same thing [and not every dev looking at this has to follow your reproduction steps]: - Could you share your example .blend file?
Author
Here [wireframe.blend](https://archive.blender.org/developer/F8445969/wireframe.blend)
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Thx for getting back, can confirm, this was working in 2.82a, checking...

Thx for getting back, can confirm, this was working in 2.82a, checking...
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Caused by cf258b02f4

@Jeroen-Bakker: mind checking?

Caused by cf258b02f4 @Jeroen-Bakker: mind checking?
Philipp Oeser changed title from Wireframe overylay is not working properly with bevel modifiers to Wireframe overylay is not working properly with multiple modifiers 2020-04-03 17:24:31 +02:00

Added subscriber: @Vyach

Added subscriber: @Vyach

The same. Second bevel not showing wire
33964213.jpg

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-03 00:24, hash: 6f4dbb661f
Worked: 2.82a release

The same. Second bevel not showing wire ![33964213.jpg](https://archive.blender.org/developer/F8447370/33964213.jpg) **System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-03 00:24, hash: `6f4dbb661f` Worked: 2.82a release

This issue was referenced by 5e0465e4ec

This issue was referenced by 5e0465e4ecba5349418f3b76b3d0061788047e9a
Philipp Oeser self-assigned this 2020-04-04 11:15:05 +02:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75343
No description provided.